--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 description = "A tool to convert directed and undirected graphs from NAUTY and Traces into adjacency, dot, and net files."
 license = "MIT"
 keywords = ["graph", "nauty", "cli", "parser"]
+repository = "https://github.com/noamteyssier/convg"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
